@@ -3,6 +3,8 @@
 This file documents user visible changes between versions of StumpWM
 
 * Changes since 0.9.1
+** New command emacs
+
 ** AltGr modifier should be recognized now
 
 ** new command grename
